src/scss/partials/_chatPinned.scss
/* ... */
.pinned-audio {
  --progress-height: .25rem;

  &.is-floating {
    --container-height: var(--pinned-audio-height);
  }

  &:not(.is-floating) {
    padding-right: 1.75rem;
    max-width: 210px;
    position: relative;
  }

  /* &.is-floating .pinned-audio-ico {
    margin-left: -.25rem;
  } */

  .pinned-container-wrapper {
    overflow: visible !important;

    > .btn-icon {
      margin-left: 0 !important;
    }
  }

  &-ico {
    &:before {
      content: $tgico-largeplay;
    }

    &.flip-icon:before {
      content: $tgico-largepause;
    }
  }

  &-title {
    font-weight: 500;
  }

  &-subtitle {
    color: var(--secondary-text-color);
  }

  &-title, 
  &-subtitle {
    font-size: .875rem;
    line-height: var(--line-height);
    width: 100%;
    max-width: 100%;

    @include text-overflow();
  }

  &-content {
    margin-left: .75rem;
  }

  &-progress {
    --border-radius: 0;
    --height: var(--progress-height);
    --scaleX: 1;
    --translateY: .125rem;
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;
    transform: scaleX(var(--scaleX)) translateY(var(--translateY));
    transform-origin: left center;
    transition: transform var(--transition-standard-out);

    body.is-right-column-shown & {
      @include respond-to(medium-screens) {
        --scaleX: calc(1 - var(--right-column-proportion));
      }
      
      transition: transform var(--transition-standard-in);
    }

    @include animation-level(0) {
      transition: none !important;
    }

    &:before {
      @include animation-level(2) {
        transition: opacity .2s ease-in-out;
      }
    }

    &:not(:hover):before {
      opacity: 0;
    }

    @include hover() {
      --translateY: 0;
    }

    .progress-line__filled {
      &:after {
        display: none !important;
      }
    }

    &-wrapper {
      position: absolute;
      height: var(--progress-height);
      right: 0;
      bottom: 0;
      left: 0;
      overflow: hidden;
    }
  }

  &-volume {
    align-items: center;
    position: relative;
    width: 2.5rem;
    height: 2.5rem;

    html.is-touch & {
      display: none;
    }

    &-tunnel {
      position: absolute;
      top: 100%;
      left: 0;
      right: 0;
      bottom: -1rem;
      content: " ";
    }

    .player-volume__icon {
      fill: var(--secondary-text-color);
      width: inherit;
      height: inherit;
      cursor: pointer;
    }

    &.active .player-volume__icon {
      fill: var(--primary-color);
    }

    .progress-line {
      &-container {
        position: absolute;
        top: 100%;
        width: 5rem;
        padding: .75rem 1rem;
        margin-top: 2.25rem;
        transform: rotate(270deg);
        border-radius: $border-radius-medium;
        background-color: var(--surface-color);
        box-shadow: 0px 1px 5px 0px rgb(0 0 0 / 15%);
        opacity: 0;
        visibility: hidden;
        transition: opacity .2s ease-in-out, visibility 0s .2s;

        // make a tunnel so volume won't hide during moving the cursor
        /* &:before {
          position: absolute;
          top: -50%;
          left: 0;
          right: -1rem;
          content: " ";
        } */

        @include animation-level(0) {
          transition: none !important;
        }
      }
    }

    &:hover, &:active {
      .progress-line-container {
        opacity: 1;
        visibility: visible;
        transition: opacity .2s ease-in-out, visibility 0s 0s;
      }
    }
  }
}

